--- a/index.html
+++ b/index.html
@@ -2,44 +2,41 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Cookbook Lady</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua|Taviraj" rel="stylesheet">
+  <title>Full Page Parallax Scroll Effect</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
   
-  
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="css/style.css">
 
   
 </head>
 
 <body>
-  <body> 
-  <h1> The Cookbook Enthusiast </h1>
-  <h3><em>by Allie Griffin</em></h3>
-  <div class="text">
-  <p>Walking along East 2nd Street between 2nd Ave and Bowery, it can be easy to miss the hidden basement shop, Bonnie Slotnick Cookbooks. The tucked away red door is marked by only be an old-timey “Cook Books” sign.
-</p>
-  <p> For those observant enough to make it in the door, a whole other world awaits them.
-</p>
-  <p>The four walls of the homey shop are covered floor-to-ceiling in cook books — but not shiny new ones with Chrissy Tegan on the cover. Slotnick, the store’s owner and namesake has individually chosen each of the TK books in the shop, all of which are out of print and/or antiquarian. 
-</p>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam rhoncus tellus vel neque euismod elementum. Vestibulum ut dui eget metus sollicitudin cursus. Quisque mauris nunc, gravida ut urna a, maximus fermentum tortor. Donec sem sem, tempus quis ipsum ac, lacinia ullamcorper tortor. </p>
-    <q>Morbi dignissim congue nisi, pharetra vehicula nisi viverra vel. Fusce enim tellus, interdum ac augue ut, sodales ornare nisl.</q>
+  <div class="container">
+  <section class="background">
+    <div class="content-wrapper">
+      <p class="content-title">Full Page Parallax Effect</p>
+      <p class="content-subtitle">Scroll down and up to see the effect!</p>
+    </div>
+  </section>
+  <section class="background">
+    <div class="content-wrapper">
+      <p class="content-title">Cras lacinia non eros nec semper.</p>
+      <p class="content-subtitle">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras ut massa mattis nibh semper pretium.</p>
+    </div>
+  </section>
+  <section class="background">
+    <div class="content-wrapper">
+      <p class="content-title">Etiam consequat lectus.</p>
+      <p class="content-subtitle">Nullam tristique urna sed tellus ornare congue. Etiam vitae erat at nibh aliquam dapibus.</p>
+    </div>
+  </section>
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js'></script>
+<script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
 
-    <p>Integer at scelerisque libero, eget placerat ligula. Pellentesque nulla sem, ultricies at malesuada quis, ullamcorper a magna. In tincidunt fringilla mollis. Mauris vitae mauris neque. Mauris luctus erat risus, efficitur pellentesque mi placerat in. Praesent vel vulputate turpis.</p>
+    <script src="js/index.js"></script>
 
-  <p>Maecenas semper ex ac sem blandit, ac cursus neque luctus. Integer sagittis congue ligula a finibus. Phasellus velit est, auctor sed vehicula sit amet, interdum et massa. Sed in tempus ligula. Nam vel suscipit velit. Nunc eget cursus ante, sit amet viverra nunc. Pellentesque id faucibus augue. Vivamus porttitor eu eros sed dignissim.</p>
-
-  <p>Mauris eleifend mi mattis rutrum sagittis. Phasellus eget eros vitae dolor ullamcorper condimentum. Integer accumsan tortor sem, sit amet mattis ligula cursus a. Mauris et pretium tortor. Donec sed condimentum sem, ac elementum velit. Aliquam erat volutpat. Vestibulum hendrerit ut urna vel malesuada. Pellentesque pulvinar dolor sapien, ut bibendum justo rutrum vel. Suspendisse eleifend dolor sit amet fermentum ullamcorper. Fusce et dolor placerat, varius elit in, pellentesque velit. Morbi luctus sagittis lorem, ac elementum lacus tristique vel.</p>
-
-<p>Etiam non tincidunt arcu, quis posuere risus. Sed id turpis porta, commodo magna ac, convallis diam. Donec lectus magna, laoreet at magna sed, volutpat vestibulum diam. Duis mi odio, mattis a libero nec, volutpat blandit magna. Morbi congue quam libero, non consectetur justo fringilla porta. Duis vestibulum dignissim nunc finibus lobortis. Praesent eu odio facilisis, euismod nulla aliquet, aliquet lorem. Vivamus sit amet placerat nunc, sed egestas urna. In fringilla orci commodo lacus convallis eleifend. Aenean volutpat nibh eros, nec elementum purus lobortis ut. Curabitur consequat ac augue eu condimentum.</p>
-
-<p>Fusce ultrices odio sed arcu aliquam efficitur. In feugiat tellus non eros scelerisque egestas. Cras tincidunt lectus sit amet velit tempus consectetur. In imperdiet at ex at molestie. Suspendisse mattis quam sed faucibus dignissim. Proin sed magna aliquam, tincidunt odio ac, dapibus orci. Ut posuere augue at lacus iaculis accumsan. Nam fringilla mattis felis, vitae tincidunt lectus facilisis a. Nulla facilisi. Cras convallis magna eget diam pellentesque convallis. Sed gravida volutpat ultrices. Suspendisse in mattis nunc, eget ultrices est. Aliquam congue laoreet neque eget rutrum. Suspendisse ullamcorper lacinia magna ut gravida.
-  </p>
-  </div>
-</body>
-  
-  
 </body>
 </html>
