--- a/index.html
+++ b/index.html
@@ -22,25 +22,26 @@
   <h1> The Cookbook Enthusiast </h1>
   <h3><em>by Allie Griffin</em></h3>
   <div class="text">
-  <p>Walking along East 2nd Street between 2nd Ave and Bowery, it can be easy to miss the hidden basement shop, Bonnie Slotnick Cookbooks. The tucked away red door is marked by only be an old-timey “Cook Books” sign.
-</p>
-  <p> For those observant enough to make it in the door, a whole other world awaits them.
-</p>
-  <p>The four walls of the homey shop are covered floor-to-ceiling in cook books — but not shiny new ones with Chrissy Tegan on the cover. Slotnick, the store’s owner and namesake has individually chosen each of the TK books in the shop, all of which are out of print and/or antiquarian. 
-</p>
-  <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam rhoncus tellus vel neque euismod elementum. Vestibulum ut dui eget metus sollicitudin cursus. Quisque mauris nunc, gravida ut urna a, maximus fermentum tortor. Donec sem sem, tempus quis ipsum ac, lacinia ullamcorper tortor. </p>
-    <q>Morbi dignissim congue nisi, pharetra vehicula nisi viverra vel. Fusce enim tellus, interdum ac augue ut, sodales ornare nisl.</q>
-
-    <p>Integer at scelerisque libero, eget placerat ligula. Pellentesque nulla sem, ultricies at malesuada quis, ullamcorper a magna. In tincidunt fringilla mollis. Mauris vitae mauris neque. Mauris luctus erat risus, efficitur pellentesque mi placerat in. Praesent vel vulputate turpis.</p>
-
-  <p>Maecenas semper ex ac sem blandit, ac cursus neque luctus. Integer sagittis congue ligula a finibus. Phasellus velit est, auctor sed vehicula sit amet, interdum et massa. Sed in tempus ligula. Nam vel suscipit velit. Nunc eget cursus ante, sit amet viverra nunc. Pellentesque id faucibus augue. Vivamus porttitor eu eros sed dignissim.</p>
-
-  <p>Mauris eleifend mi mattis rutrum sagittis. Phasellus eget eros vitae dolor ullamcorper condimentum. Integer accumsan tortor sem, sit amet mattis ligula cursus a. Mauris et pretium tortor. Donec sed condimentum sem, ac elementum velit. Aliquam erat volutpat. Vestibulum hendrerit ut urna vel malesuada. Pellentesque pulvinar dolor sapien, ut bibendum justo rutrum vel. Suspendisse eleifend dolor sit amet fermentum ullamcorper. Fusce et dolor placerat, varius elit in, pellentesque velit. Morbi luctus sagittis lorem, ac elementum lacus tristique vel.</p>
-
-<p>Etiam non tincidunt arcu, quis posuere risus. Sed id turpis porta, commodo magna ac, convallis diam. Donec lectus magna, laoreet at magna sed, volutpat vestibulum diam. Duis mi odio, mattis a libero nec, volutpat blandit magna. Morbi congue quam libero, non consectetur justo fringilla porta. Duis vestibulum dignissim nunc finibus lobortis. Praesent eu odio facilisis, euismod nulla aliquet, aliquet lorem. Vivamus sit amet placerat nunc, sed egestas urna. In fringilla orci commodo lacus convallis eleifend. Aenean volutpat nibh eros, nec elementum purus lobortis ut. Curabitur consequat ac augue eu condimentum.</p>
-
-<p>Fusce ultrices odio sed arcu aliquam efficitur. In feugiat tellus non eros scelerisque egestas. Cras tincidunt lectus sit amet velit tempus consectetur. In imperdiet at ex at molestie. Suspendisse mattis quam sed faucibus dignissim. Proin sed magna aliquam, tincidunt odio ac, dapibus orci. Ut posuere augue at lacus iaculis accumsan. Nam fringilla mattis felis, vitae tincidunt lectus facilisis a. Nulla facilisi. Cras convallis magna eget diam pellentesque convallis. Sed gravida volutpat ultrices. Suspendisse in mattis nunc, eget ultrices est. Aliquam congue laoreet neque eget rutrum. Suspendisse ullamcorper lacinia magna ut gravida.
-  </p>
+ <p> Walking along East 2nd Street between 2nd Ave and Bowery, it can be easy to miss the hidden basement shop, Bonnie Slotnick Cookbooks. The tucked away red door is marked by only be an old-timey “Cook Books” sign. </p>
+IMAGE HERE 
+<p> For those observant enough to make it in the door, a whole other world awaits them. </p>
+<p> The four walls of the homey shop are covered floor-to-ceiling in cookbooks — but not shiny new ones with Chrissy Teigen on the cover. Slotnick, the store’s owner and namesake has individually chosen each of the 4,000 books in the shop, all of which are out of print and/or antiquarian. </p>
+<p> In addition to Teigen’s cookbook, you won’t find any food network stars’ books, any microwave cookbooks, and nothing “that promises gourmet food in 10 or 15 minutes.” Also on Slotnick’s no list is “anything with the word ‘girl’ in the title, unless it’s a children’s cookbook. I really hate the ‘Party girl’s 15 best cocktails.’”  </p>
+<p> What she looks for are books with “a very personal voice of an author.” </p>
+<p> The beloved shop moved into the 1830s brick row house in early 2015, after 15 years on West 10th Street when Slotnick’s previous landlord refused to renew her lease. The owners of her new location reached out to her when the heard the news, noting their mother’s, a New York Times book critic, love of reading and cooking. </p>
+TK INFO ON LANDLORDS, IMAGE
+<p> Slotnick actually went to school for fashion illustration at Parsons School of Design in 1972. “I thought that was exactly what I wanted to do. I was wrong,” she said. However, it definitely did influence her future career path. </p>
+<p> As a student, Slotnick worked in the school’s library and continued full time for a few years after graduation. “While I was working there I guess I realized how much I loved book and handling books,” she said. “It was a very nice place to work, I still dream about it.” </p>
+<p> After leaving the Parsons library, Slotnick worked for a small cookbook publisher and eventually opened up her shop “on Washington place in a little basement office.” It moved a few years later to West 10th. </p>
+<p> Though she makes no claims to being a chef — “I don’t want to work that hard,” she said — she has never had food delivered to her apartment in 40 years. She cooks simple things for herself and reads cookbooks for enjoyment, rather than for recipes to make. </p>
+<p> “I’ve always found cookbooks something I could just lose myself in. My mother had only two or three cookbooks, but I used to read them,” she said. “My parents had a copy of Emily Post’s Etiquette from around 1950 which I used to just read like it was the best story I ever read.” </p>
+<p> Her favorites and those in her own collection are cookbooks from the 19th century. “It seems like a much richer time to me. The whole time I lived in the city, for the last 40-something years, I’ve lived in an apartment from the 1890s, there are little vestiges, you can get glimpses of what life was like then just from being in a building like that and walking around the village.” </p>
+TK IMAGE OF MAP 
+<p> When she first moved to New York, there were “bookstores in all neighborhoods in NY then, wherever you found yourself.” A lot in personal collection are turn of the century books that she paid no more than $3 for at that time. </p>
+<p> Today, there are hardly any bookstores left in the city, as well as the country-side. Slotnick reminisced how she would go on book hunting weeks with a friend to Vermont, New England, California, the Midwest, England once, or very locally to New Jersey and Pennsylvania. “It was like a gourmet tour for both of us,” she said, recalling how they would dump their finds of that day out at the motel to admire the special steals before bed like little kids with candy on Halloween. </p>
+<p> “I rarely take any kind time off without somehow getting to a bookstore,” Slotnick said. “If I drive into NJ, the car starts to pull towards Morristown where there’s a wonderful old bookstore.” </p>
+<p> Now it’s a lot harder to find bookstores, because everything is sold online. However, Slotnick notes cookbooks are seemingly regaining popularity. “The fact that the recipes online are losing their attribution and any connection to a person or entity is making people more interested in cookbooks, ” she said, noting that ebooks also seem to be in decline. </p>
+<p> “People are more interested in buying physical books so that makes me happy. I wish they would buy them in bookstores instead of online — one particular place in particular,” she said laughing. “That’s destroying the whole society, the whole world. Pretty soon there will be no stores in the West Village.” </p>
     
   </div>
 </body>
