--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <p> The four walls of the homey shop are covered floor-to-ceiling in cookbooks — but not shiny new ones with Chrissy Teigen on the cover. Slotnick, the store’s owner and namesake has individually chosen each of the 4,000 books in the shop, all of which are out of print and/or antiquarian. </p>
 <p> In addition to Teigen’s cookbook, you won’t find any food network stars’ books, any microwave cookbooks, and nothing “that promises gourmet food in 10 or 15 minutes.” Also on Slotnick’s no list is “anything with the word ‘girl’ in the title, unless it’s a children’s cookbook. I really hate the ‘Party girl’s 15 best cocktails.’”  </p>
 <p> What she looks for are books with “a very personal voice of an author.” </p>
+    <img class=imageE src="DSC_005.jpg">
 <p> The beloved shop moved into the 1830s brick row house in early 2015, after 15 years on West 10th Street when Slotnick’s previous landlord refused to renew her lease. The owners of her new location reached out to her when the heard the news, noting their mother’s, a New York Times book critic, love of reading and cooking. </p>
  <img class="imageC" src="DSC_0050.jpg"> 
   <p> Slotnick actually went to school for fashion illustration at Parsons School of Design in 1972. “I thought that was exactly what I wanted to do. I was wrong,” she said. However, it definitely did influence her future career path. </p>
