--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <q> I rarely take any kind time off without somehow getting to a bookstore,” Slotnick said. “If I drive into New Jersey, the car starts to pull towards Morristown where there’s a wonderful old bookstore. </q>
 <p> Now it’s a lot harder to find bookstores, because everything is sold online. However, Slotnick notes cookbooks are seemingly regaining popularity. “The fact that the recipes online are losing their attribution and any connection to a person or entity is making people more interested in cookbooks, ” she said, noting that ebooks also seem to be in decline. </p>
 <p> “People are more interested in buying physical books so that makes me happy. I wish they would buy them in bookstores instead of online — one particular place in particular,” she said laughing. “That’s destroying the whole society, the whole world. Pretty soon there will be no stores in the West Village.” </p>
-    
+    <img class="imageG" src="DSC_006.jpg">
   </div>
 </body>
   
