--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="style.css">
 
   
 </head>
 
 <body>
-  <body> 
+ 
   <img class="coverimage" src="DSC_0002.jpg">
   <h1> The Cookbook Enthusiast </h1>
   <h3><em>by Allie Griffin</em></h3>
   <div class="text">
  <p> Walking along East 2nd Street between 2nd Ave and Bowery, it can be easy to miss the hidden basement shop, Bonnie Slotnick Cookbooks. The tucked away red door is marked by only be an old-timey “Cook Books” sign. </p>
-  <img class="imageA" src="DSC_0097.jpg">   <img class="imageB" src="DSC_0098.jpg"> 
+ <center> <img class="imageA" src="DSC_0097.jpg">   <img class="imageB" src="DSC_0098.jpg"> </center>
 <p> For those observant enough to make it in the door, a whole other world awaits them. </p>
 <p> The four walls of the homey shop are covered floor-to-ceiling in cookbooks — but not shiny new ones with Chrissy Teigen on the cover. Slotnick, the store’s owner and namesake has individually chosen each of the 4,000 books in the shop, all of which are out of print and/or antiquarian. </p>
 <p> In addition to Teigen’s cookbook, you won’t find any food network stars’ books, any microwave cookbooks, and nothing “that promises gourmet food in 10 or 15 minutes.” Also on Slotnick’s no list is “anything with the word ‘girl’ in the title, unless it’s a children’s cookbook. I really hate the ‘Party girl’s 15 best cocktails.’”  </p>
@@ -45,7 +45,7 @@
 <p> “People are more interested in buying physical books so that makes me happy. I wish they would buy them in bookstores instead of online — one particular place in particular,” she said laughing. “That’s destroying the whole society, the whole world. Pretty soon there will be no stores in the West Village.” </p>
     <img class="imageG" src="DSC_0006.jpg">
   </div>
-</body>
+
   
   
 </body>
