--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       their mother’s, a New York Times book critic, love of reading and cooking. </p>
     <center> <img class="imageA" src="https://farm5.staticflickr.com/4158/34484378681_eea5d16d00_c.jpg"> </center>
     <div class=“caption”>
-    <p>An article written about Slotnick and her new landlords. “It kind of gave me an award for surviving… ‘Before Elizabeth Warren persisted, Bonnie Slotnick persisted.’”<p>
-    </div>
+    <h5>An article written about Slotnick and her new landlords. “It kind of gave me an award for surviving… ‘Before Elizabeth Warren persisted, Bonnie Slotnick persisted.’”<h5>
+      </div>
     
     <p> Slotnick actually went to school for fashion illustration at Parsons School of Design in 1972. “I thought that was exactly what I wanted to do. I was wrong,” she said. However, it definitely did influence her future career path. </p>
     <p> As a student, Slotnick worked in the school’s library and continued full time for a few years after graduation. “While I was working there I guess I realized how much I loved book and handling books,” she said. “It was a very nice place to work, I
@@ -47,7 +47,7 @@
     <p> After leaving the Parsons library, Slotnick worked for a small cookbook publisher and eventually opened up her shop “on Washington place in a little basement office.” It moved a few years later to West 10th. </p>
     <p> Though she makes no claims to being a chef — “I don’t want to work that hard,” she said — she has never had food delivered to her apartment in 40 years. She cooks simple things for herself and reads cookbooks for enjoyment, rather than for recipes to make. </p>
     <hr width="300">
-    <q><em> I’ve always found cookbooks something I could just lose myself in. </em></q>
+    <q><em> "I’ve always found cookbooks [to be] something I could just lose myself in." </em></q>
     <hr width="300">
     <img class="imageB" src="https://farm5.staticflickr.com/4160/34573386816_67e13e4f3b_c.jpg"> 
   <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/322311311&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
@@ -59,13 +59,13 @@
     <p> Her favorites and those in her own collection are cookbooks from the 19th century. “It seems like a much richer time to me. The whole time I lived in the city, for the last 40-something years, I’ve lived in an apartment from the 1890s, there are little vestiges, you can get glimpses of what life was like then just from being in a building like that and walking around the village.” </p>
     <center><iframe width="560" height="315" src="https://www.youtube.com/embed/U8loJ1YpNq4" frameborder="0" allowfullscreen></iframe></center>
     <div class= “caption”>
-    <p> Map of New York in 1961 showing ‘book row’ on Fourth Avenue between Astor Place and Union Square. <p>
+    <h5> Map of New York in 1961 showing ‘book row’ on Fourth Avenue between Astor Place and Union Square. </h5>
     </div>
     <p> When she first moved to New York, there were “bookstores in all neighborhoods in NY then, wherever you found yourself.” A lot in personal collection are turn of the century books that she paid no more than $3 for at that time. </p>
     <p> Today, there are hardly any bookstores left in the city, as well as the country-side. Slotnick reminisced how she would go on book hunting weeks with a friend to Vermont, New England, California, the Midwest, England once, or very locally to New Jersey
       and Pennsylvania. “It was like a gourmet tour for both of us,” she said, recalling how they would dump their finds of that day out at the motel to admire the special steals before bed like little kids with candy on Halloween. </p>
     <hr width="300">
-    <q> I rarely take any kind time off without somehow getting to a bookstore. </q>
+    <q> "I rarely take any kind time off without somehow getting to a bookstore." </q>
     <hr width="300">
     <p> “If I drive into New Jersey, the car starts to pull towards Morristown where there’s a wonderful old bookstore."</p>
     <p> Now it’s a lot harder to find bookstores, because everything is sold online. However, Slotnick notes cookbooks are seemingly regaining popularity. “The fact that the recipes online are losing their attribution and any connection to a person or entity
